# rusty-kim

./: Cargo.toml  README.md  build.rs  kim.c  link.ld  mos-kim1-none.json  mos-sim-none.json  mos-unknown-none.json
.cargo/: config.toml
aoc2024d1p1/: README.md  build.rs  kim.c  test_input_not_mine.txt
aoc2024d1p1/ldscripts/: link.ld  zp-noinit.ld  zp.ld
aoc2024d1p1/src/: main.rs
kim1-loader/: Cargo.toml
kim1-loader/src/: main.rs
ldscripts/: bss.ld  c.ld  data.ld  link.ld  noinit.ld  rodata.ld  text.ld  zp-bss.ld  zp-data.ld
src/: main.rs
