cargo-features = ["different-binary-name"]

[package]
name = "rusty-kim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
lto = true
opt-level = 2
debug = 2
codegen-units = 1
panic="abort"

[profile.release]
opt-level = "z"
lto = true
debug = false
panic="abort"
codegen-units = 1

[patch.crates-io]
ufmt = {git="https://github.com/mrk-its/ufmt", branch="ptr_width_16_fix"}
ufmt-write = {git="https://github.com/mrk-its/ufmt", branch="ptr_width_16_fix"}

[dependencies]
panic-halt = "0.2.0"
ufmt-stdio = "0"

[build-dependencies]
cc = "1.0.83"

[[bin]]
name = "rusty-kim"
filename="rusty-kim.bin"

